--- a/app/src/main/res/layout/thumbnail.xml
+++ b/app/src/main/res/layout/thumbnail.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <GridView
-        android:id="@+id/video_grid_view"
+    android:orientation="vertical"
+    android:background="#121212">
+    
+    <ImageView
+        android:id="@+id/thumbnail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="auto_fit"
-        android:gravity="center"
-        android:stretchMode="columnWidth"
-        android:listSelector="#FFD9F3"/>
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:visibility="visible"/>
+
 </LinearLayout>
